[package]
name = "xtree"
version = "0.1.4"
authors = ["xstater email:a166224@163.com"]
license-file = "LICENSE"
keywords = ["tree","cursor","ADT"]
repository = "https://github.com/xstater/xtree"
readme = "README.md"
description = "A simple general purpose tree data structure."
documentation = "https://docs.rs/xtree/0.1.4/xtree/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "xtree"
