[package]
name = "xtree"
version = "0.1.8"
authors = ["xstater email:a166224@163.com"]
homepage = "https://github.com/xstater/xtree"
categories = ["data-structures"]
license = "MIT"
keywords = ["tree","cursor","ADT"]
repository = "https://github.com/xstater/xtree"
readme = "README.md"
description = "A simple general purpose tree data structure."
documentation = "https://docs.rs/xtree/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "xtree"
